news card section added

--- a/index.html
+++ b/index.html
@@ -240,6 +240,99 @@
             </div>
         </div>
     </section>
+    <!-- news feed area -->
+    <section class="news-feed">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-3 col-md-3 col-sm-3 col-6">
+                    <div class="first-card ">
+                        <img src="images/card.png" class="card-img-top" alt="...">
+                        <div class="first-card-body">
+                            <p class="card-text">What we need to Know
+                                About Coronavirus in the year 2020</p>
+                            <span>Load more</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-3 col-sm-3 col-6">
+                    <div class="card">
+                        <div class="card-img">
+                            <img src="images/card-1.png" class="card-img-top" alt="...">
+                        </div>
+                        <div class="card-body">
+                            <span class="date">25 May 2020</span>
+                            <h2>V2N3 Newsletter May 2020</h2>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-3 col-sm-3 col-6">
+                    <div class="card">
+                        <div class="card-img">
+                            <img src="images/card-2.png" class="card-img-top" alt="...">
+                        </div>
+                        <div class="card-body">
+                            <span class="date">21 April 2020</span>
+                            <h2>V2N3 Newsletter May 2020</h2>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-3 col-sm-3 col-6">
+                    <div class="card">
+                        <div class="card-ing">
+                            <img src="images/card-3.png" class="card-img-top" alt="...">
+                        </div>
+                        <div class="card-body">
+                            <span class="date">14 April 2020</span>
+                            <h2>COVID-19 Situation June 2020</h2>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-3 col-sm-3 col-6">
+                    <div class="card">
+                        <div class="card-body">
+                            <span class="date">30 December 2019</span>
+                            <h2>V2N2 Newsletter April 2020 (বাংলা ভাষায় বিশেষ সংখ্যা)</h2>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-3 col-sm-3 col-6">
+                    <div class="card">
+                        <div class="card-body">
+                            <span class="date">25 December 2019</span>
+                            <h2>Responding to community spread of COVID-19</h2>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-3 col-sm-3 col-6">
+                    <div class="card">
+                        <div class="card-body">
+                            <span class="date">21 August 2019</span>
+                            <h2>Handbook of COVID-19 Prevention and Treatment</h2>
+    
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-3 col-sm-3 col-6">
+                    <div class="card">
+                        <div class="card-body">
+                            <span class="date">17 August 2019</span>
+                            <h2>Critical preparedness, readiness and response actions for COVID-19</h2>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-3 col-sm-3 col-6">
+                    <div class="card">
+                        <div class="card-body">
+                            <span class="date">17 August 2019</span>
+                            <h2>Critical preparedness, readiness and response actions for COVID-19</h2>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            
+        </div>
+        </div>
+    </section>
 
 
     <!-- bootstrap scripts -->
