all section added except footer

--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
                         <div class="card-body">
                             <span class="date">21 August 2019</span>
                             <h2>Handbook of COVID-19 Prevention and Treatment</h2>
-    
+
                         </div>
                     </div>
                 </div>
@@ -316,24 +316,230 @@
                     <div class="card">
                         <div class="card-body">
                             <span class="date">17 August 2019</span>
-                            <h2>Critical preparedness, readiness and response actions for COVID-19</h2>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-3 col-sm-3 col-6">
-                    <div class="card">
-                        <div class="card-body">
-                            <span class="date">17 August 2019</span>
-                            <h2>Critical preparedness, readiness and response actions for COVID-19</h2>
+                            <h2>Critical preparedness, readiness for COVID-19</h2>
                         </div>
                     </div>
                 </div>
             </div>
-            
         </div>
         </div>
     </section>
+    <!-- conference section -->
+    <section class="conference">
+        <div class="container">
+            <div class="heading">
+                <p>conference</p>
+                <h1>Successful Conferences</h1>
+            </div>
+            <div class="row">
+                <div class="col-lg-6 col-md-6">
+                    <div class="conference-info">
+                        <h1>14th A-PBA Annual Bio-risk Conference 2019</h1>
+                        <span></span>
+                        <p>Biosafety and Biosecurity – For Sustainable Development in Health and Agriculture Annual
+                            Conference 2019 of the Asia-Pacific Biosafety Association is going to be organized at Dhaka
+                            in Bangladesh on 19 - 20 September. More than 100 participants from 50 different countries
+                            around the world, in addition to Bangladeshi participants, will participate in this
+                            conference.International participants are requested to register.</p>
+                        <a href="#" class="btn btn-green">READ FULL STORY</a>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-12">
+                    <div class="conference-img">
+                        <img src="images/news.png" alt="">
+                        <div class="overlay"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
+    <!-- latest-events -->
+    <section class="latest-events">
+        <div class="container">
+            <div class="heading">
+                <p>NEWS</p>
+                <h1>Articles on Latest Events</h1>
+            </div>
+            <div class="row">
+                <div class="col-lg-4 col-md-4 col-sm-6 col-6">
+                    <div class="news-card">
+                        <div class="news-img">
+                            <img src="images/news-1.png" alt="">
+                            <div class="news-date">
+                                <p>01</p>
+                                <p>Jan</p>
+                            </div>
+                            <div class="news-card-info">
+                                <h1>District Level Sensitization And Training Program 2016</h1>
+                                <p>Training program at the district level has already been started inaugurating on 21-22
+                                    May.</p>
+                                <a href="btn">Read more</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-6 col-6">
+                    <div class="news-card">
+                        <div class="news-img">
+                            <img src="images/news-2.png" alt="">
+                            <div class="news-date">
+                                <p>01</p>
+                                <p>Jan</p>
+                            </div>
+                            <div class="news-card-info">
+                                <h1>Second International Conference on Biosafety and Biosecurity in...</h1>
+                                <p>The second International Conference on Biosafety & Biosecurity was organized at Nabab
+                                    Nawab Ali Chowdhury</p>
+                                <a href="btn">Read more</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-6 col-6">
+                    <div class="news-card">
+                        <div class="news-img">
+                            <img src="images/news-1.png" alt="">
+                            <div class="news-date">
+                                <p>01</p>
+                                <p>Jan</p>
+                            </div>
+                            <div class="news-card-info">
+                                <h1>Second International Conference on Biosafety and Biosecurity in...</h1>
+                                <p>The second International Conference on Biosafety & Biosecurity was organized at Nabab
+                                    Nawab Ali Chowdhury</p>
+                                <a href="btn">Read more</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- product section -->
+
+    <div class="our-products">
+        <div class="container">
+            <div class="heading">
+                <p>Product</p>
+                <h1>Some of Our Products</h1>
+            </div>
+            <div class="row">
+                <div class="col-lg-4 col-md-4 col-sm-12">
+                    <div class="single-product">
+                        <div class="product-img">
+                            <img src="images/productimg.png" alt="">
+                        </div>
+                        <div class="product-content">
+                            <h1>Indigo Violet</h1>
+                            <div class="tags"><span>English,</span><span>Mathematics,</span><span>Science</span><span>Accounts</span></div>
+                            <a href="#">Details</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-12">
+                    <div class="single-product">
+                        <div class="product-img">
+                            <img src="images/productimg-2.png" alt="">
+                        </div>
+                        <div class="product-content">
+                            <h1>Indigo Violet <span>(Top level)</span></h1>
+                            <div class="tags"><span>English,</span><span>Mathematics,</span><span>Science</span><span>Accounts</span></div>
+                            <a href="#">Details</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-12">
+                    <div class="single-product">
+                        <div class="product-img">
+                            <img src="images/productimg-3.png" alt="">
+                        </div>
+                        <div class="product-content">
+                            <h1>Indigo Violet <span>(Top level)</span></h1>
+                            <div class="tags"><span>English,</span><span>Mathematics,</span><span>Science</span><span>Accounts</span></div>
+                            <a href="#">Details</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="section gallery">
+        <div class="container">
+            <div class="heading">
+                <p>moments</p>
+                <h1>Latest Gallery</h1>
+            </div>
+            <div class="row">
+                <div class="col-lg-6 col-md-6 col-sm-6 col-6">
+                    <img src="images/gallery.png" alt="">
+                </div>
+                <div class="col-lg-6 col-mg-6 col-sm-6 col-6">
+                    <div class="row">
+                        <div class="col-lg-6 col-md-6 col-sm-6 col-6">
+                            <img src="images/gallery-2.png" alt="">
+                        </div>
+                        <div class="col-lg-6 col-md-6 col-sm-6 col-6">
+                            <img src="images/gallery-3.png" alt="">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-6 col-md-6 col-sm-6 col-6">
+                            <img src="images/gallery-5.png" alt="">
+                        </div>
+                        <div class="col-lg-6 col-md-6 col-sm-6 col-6">
+                            <img src="images/gallery-6.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+<!-- executive committee -->
+<section class="slider">
+    <div class="container">
+        <div class="heading">
+            <p>KNOW US BETTER</p>
+            <h1>Executive Committee</h1>
+        </div>
+        <div class="dr-sliders row">
+            <div class="item col-lg-4 col-md-4 col-sm-12 col-6">
+                <div class="single-slider">
+                    <div class="slider-img">
+                        <img src="images/dr-1.jpg" alt="">
+                    </div>
+                    <div class="slider-content">
+                        <h1>Dr Asadulghani [MSc, MPhil, PhD]</h1>
+                        <p>president</p>
+                    </div>
+                </div>
+            </div>
+            <div class="item col-lg-4 col-md-4 col-sm-12 col-6">
+                <div class="single-slider">
+                    <div class="slider-img">
+                        <img src="images/dr-2.jpg" alt="">
+                    </div>
+                    <div class="slider-content">
+                        <h1>Dr Md Giasuddin [DVM, MSc, PhD]</h1>
+                        <p>VICE PRESIDENT</p>
+                    </div>
+                </div>
+            </div>
+            <div class="item col-lg-4 col-md-4 col-sm-12 col-6">
+                <div class="single-slider">
+                    <div class="slider-img">
+                        <img src="images/dr-3.jfif" alt="">
+                    </div>
+                    <div class="slider-content">
+                        <h1>Dr Md Latiful Bari [MSc, PhD]</h1>
+                        <p>VICE PRESIDENT</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 
     <!-- bootstrap scripts -->
 
