--- a/index.html
+++ b/index.html
@@ -433,7 +433,9 @@
                         </div>
                         <div class="product-content">
                             <h1>Indigo Violet</h1>
-                            <div class="tags"><span>English,</span><span>Mathematics,</span><span>Science</span><span>Accounts</span></div>
+                            <div class="tags">
+                                <span>English,</span><span>Mathematics,</span><span>Science</span><span>Accounts</span>
+                            </div>
                             <a href="#">Details</a>
                         </div>
                     </div>
@@ -445,7 +447,9 @@
                         </div>
                         <div class="product-content">
                             <h1>Indigo Violet <span>(Top level)</span></h1>
-                            <div class="tags"><span>English,</span><span>Mathematics,</span><span>Science</span><span>Accounts</span></div>
+                            <div class="tags">
+                                <span>English,</span><span>Mathematics,</span><span>Science</span><span>Accounts</span>
+                            </div>
                             <a href="#">Details</a>
                         </div>
                     </div>
@@ -457,7 +461,9 @@
                         </div>
                         <div class="product-content">
                             <h1>Indigo Violet <span>(Top level)</span></h1>
-                            <div class="tags"><span>English,</span><span>Mathematics,</span><span>Science</span><span>Accounts</span></div>
+                            <div class="tags">
+                                <span>English,</span><span>Mathematics,</span><span>Science</span><span>Accounts</span>
+                            </div>
                             <a href="#">Details</a>
                         </div>
                     </div>
@@ -496,50 +502,144 @@
             </div>
         </div>
     </div>
-<!-- executive committee -->
-<section class="slider">
-    <div class="container">
-        <div class="heading">
-            <p>KNOW US BETTER</p>
-            <h1>Executive Committee</h1>
+    <!-- executive committee -->
+    <section class="slider">
+        <div class="container">
+            <div class="heading">
+                <p>KNOW US BETTER</p>
+                <h1>Executive Committee</h1>
+            </div>
+            <div class="dr-sliders row">
+                <div class="item col-lg-4 col-md-4 col-sm-12 col-6">
+                    <div class="single-slider">
+                        <div class="slider-img">
+                            <img src="images/dr-1.jpg" alt="">
+                        </div>
+                        <div class="slider-content">
+                            <h1>Dr Asadulghani [MSc, MPhil, PhD]</h1>
+                            <p>president</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="item col-lg-4 col-md-4 col-sm-12 col-6">
+                    <div class="single-slider">
+                        <div class="slider-img">
+                            <img src="images/dr-2.jpg" alt="">
+                        </div>
+                        <div class="slider-content">
+                            <h1>Dr Md Giasuddin [DVM, MSc, PhD]</h1>
+                            <p>VICE PRESIDENT</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="item col-lg-4 col-md-4 col-sm-12 col-6">
+                    <div class="single-slider">
+                        <div class="slider-img">
+                            <img src="images/dr-3.jfif" alt="">
+                        </div>
+                        <div class="slider-content">
+                            <h1>Dr Md Latiful Bari [MSc, PhD]</h1>
+                            <p>VICE PRESIDENT</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="dr-sliders row">
-            <div class="item col-lg-4 col-md-4 col-sm-12 col-6">
-                <div class="single-slider">
-                    <div class="slider-img">
-                        <img src="images/dr-1.jpg" alt="">
+    </section>
+
+    <!-- footer area -->
+    <footer>
+        <div class="footer-top">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-4">
+                        <div class="single-col">
+                            <div class="mini-head">
+                                <p>Useful links</p>
+                            </div>
+                            <img class="footer-logo" src="images/logo.png" alt="">
+                            <img class="footer-logo" src="img/logo.png" alt="">
+                            <p>The establishment of the Society was initiated in August 2011 as a professional society
+                                to foster best and sustainable Biosafety and Biosecurity practices in Bangladesh
+                                considering the current situation of infectious</p>
+                        </div>
                     </div>
-                    <div class="slider-content">
-                        <h1>Dr Asadulghani [MSc, MPhil, PhD]</h1>
-                        <p>president</p>
+                    <div class="col-lg-4">
+                        <div class="single-col">
+                            <div class="mini-head">
+                                <p>Useful links</p>
+                            </div>
+                            <div class="menus">
+                                <ul>
+                                    <li><a href="#">Home</a></li>
+                                    <li><a href="#">About Us</a></li>
+                                    <li><a href="#">Features</a></li>
+                                    <li><a href="#">Job Vacancies</a></li>
+                                    <li><a href="#">Companies</a></li>
+                                    <li><a href="#">Testimonials</a></li>
+                                    <li><a href="#">Services</a></li>
+                                </ul>
+                                <ul>
+                                    <li><a href="#">Out Team</a></li>
+                                    <li><a href="#">Our Customers</a></li>
+                                    <li><a href="#">Enquiry Form</a></li>
+                                    <li><a href="#">Our Projects</a></li>
+                                    <li><a href="#">Our Pholosophy</a></li>
+                                    <li><a href="#">Support Fourms</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="single-col">
+                            <div class="mini-head">
+                                <p>Subscribe Newsletter</p>
+                            </div>
+                            <form action="#">
+                                <input type="text" name="text" placeholder="Enter your Name" id="" class="form-control">
+                                <input type="email" name="email" id="" placeholder="Enter your email address" class="form-control">
+                                <input class="btn btn-green" type="submit" value="Submit">
+                            </form>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="item col-lg-4 col-md-4 col-sm-12 col-6">
-                <div class="single-slider">
-                    <div class="slider-img">
-                        <img src="images/dr-2.jpg" alt="">
-                    </div>
-                    <div class="slider-content">
-                        <h1>Dr Md Giasuddin [DVM, MSc, PhD]</h1>
-                        <p>VICE PRESIDENT</p>
-                    </div>
-                </div>
-            </div>
-            <div class="item col-lg-4 col-md-4 col-sm-12 col-6">
-                <div class="single-slider">
-                    <div class="slider-img">
-                        <img src="images/dr-3.jfif" alt="">
-                    </div>
-                    <div class="slider-content">
-                        <h1>Dr Md Latiful Bari [MSc, PhD]</h1>
-                        <p>VICE PRESIDENT</p>
+                <div class="row">
+                    <div class="col-lg-12">
+                        <div class="sub-footer">
+                            <p class="address">
+                                Union Heights, Level 5, 55-2 Bir Uttam Quazi Nuruzzaman Sarak, West Panthapath, Dhaka-120
+                            </p>
+                            <p class="mobile">8801730453509</p>
+                            <p class="mail">info@bdbiosafetysecurity.org</p>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-</section>
+        <div class="footer-bottom">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-4 col-sm-12">
+                        <div class="coppyright">
+                            <p>Copyrights Reserved 2020 ©  BBBS</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-8 col-sm-12">
+                        <div class="footer-menu">
+                            <ul>
+                                <li><a href="#">Home</a></li>
+                                <li><a href="#">About</a></li>
+                                <li><a href="#">Features</a></li>
+                                <li><a href="#">Team</a></li>
+                                <li><a href="#">Clients</a></li>
+                                <li><a href="#">Contact</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 
     <!-- bootstrap scripts -->
 
